# control-rs

./: .gitignore  Cargo.toml  README.md  t  test1.rs
core/: Cargo.toml
core/examples/: cart_pole_animation.rs  constrained_animation.rs  constrained_model.rs  constrained_model_animation.rs  discretizer.rs  discretizer_animation.rs  double_pendulum.rs  double_pendulum_animation.rs  double_pendulum_symbolic.rs  ilqr.rs  indirect_shooting_lqr.rs  linear_controller.rs  minimization.rs  nonlinear_controller.rs  nonlinear_controller_cartpole.rs  plot.rs  qp_lqr.rs  quadrotor.rs  quadrotor_animation.rs  quadruped.rs  ricatti_lqr.rs  rk4_numeric.rs  symbolic_eval.rs
core/src/: lib.rs  main.rs  utils.rs
core/src/animation/: macroquad.rs  mod.rs
core/src/common/: evaluable.rs  labels.rs  mod.rs
core/src/controllers/: constraints.rs  hessians.rs  indirect_shooting.rs  jacobians.rs  mod.rs  options.rs  trajectory.rs  utils.rs
core/src/controllers/ddp/: controller.rs  mod.rs  options.rs  q_hessian.rs  utils.rs
core/src/controllers/indirect_shooting/: common.rs  controller.rs  lqr.rs  mod.rs  symbolic.rs
core/src/controllers/qp_lqr/: common.rs  lqr.rs  mod.rs  options.rs  symbolic.rs  utils.rs
core/src/controllers/qp_mpc/: common.rs  linear.rs  mod.rs  mpc.rs  options.rs  symbolic.rs
core/src/controllers/ricatti_lqr/: lqr.rs  mod.rs  options.rs  recursion.rs
core/src/controllers/riccati_lqr/: common.rs  lqr.rs  mod.rs  numeric.rs  options.rs  recursion.rs  riccati.rs  symbolic.rs
core/src/cost/: generic.rs  mod.rs  terminal_minimum_control.rs
core/src/numeric_services/: mod.rs
core/src/numeric_services/codegen/: dtos.rs  engine.rs  mod.rs
core/src/numeric_services/codegen/codegen_engine/: codegen.rs
core/src/numeric_services/differentiation/: dtos.rs  engine.rs  error.rs  mod.rs
core/src/numeric_services/differentiation/sympy_engine/: backend.py  sympy copy.rs  sympy.rs
core/src/numeric_services/solver/: dtos.rs  line_search.rs  mod.rs  models.rs  newton.rs  newton_utils.rs
core/src/numeric_services/symbolic/: dtos.rs  error.rs  mod.rs  models.rs  ports.rs
core/src/physics/: constants.rs  energy.rs  error.rs  mod.rs  traits.rs
core/src/physics/discretizer/: backward_euler.rs  forward_euler.rs  helpers.rs  hermite_simpson.rs  implicit_midpoint copy.rs  implicit_midpoint.rs  mid_point.rs  mod.rs  rk4.rs  rk4_numeric.rs  utils.rs  zero_order_hold.rs
core/src/physics/models/: dynamics.rs  mod.rs  no_input.rs  state.rs
core/src/physics/simulator/: mod.rs
core/src/plotter/: display.rs  mod.rs  time_series.rs
core/src/solver/: line_search.rs  linear_solver.rs  mod.rs  models.rs  newton.rs  symbolic_solver.rs
core/src/solver/osqp/: builder.rs  solver.rs
core/src/solver/qp/: qp_builder.rs  qp_solver.rs
core/src/solvers/: dtos.rs  linear_solver.rs  mod.rs
core/src/solvers/newton_symbolic/: line_search.rs  problem_spec.rs  solver.rs  utils.rs
core/src/solvers/osqp/: solver.rs
core/src/solvers/qp/: qp_builder.rs  qp_solver.rs
core/src/symbolic_services/codegen/: dtos.rs  error.rs
core/src/symbolic_services/symbolic/: dtos.rs  error.rs  mod.rs
core/src/utils/: evaluable.rs  helpers.rs  identifiable.rs  labels.rs  matrix.rs  mod.rs  noise.rs  vector.rs
core/tests/: arithmetics_tests.rs  discretizer_tests.rs  dynamics_tests.rs  linear_controller_tests.rs  numeric_controller_tests.rs  numeric_discretizer_tests.rs  numeric_rk4_tests.rs  solver_tests.rs  symbolic_controller_tests.rs
exercises/: Cargo.toml  README.md
exercises/examples/: hw2_q1.rs  hw2_q2.rs  hw2_q3.rs
exercises/src/: trajectory_options.rs
hw/: Cargo.toml  README.md
hw/examples/: hw2_q1.rs  hw2_q2.rs  hw2_q3.rs
hw/src/: lib.rs
(+136 files in other folders)
