[package]
name = "control-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = { version = "0.33.2", features = ["rayon"]}
plotters = "0.3.7"
macroquad = "0.4.14"
async-trait = "0.1"
serde = {version ="1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0.140"
toml = "0.8"
meval = "0.2"
fasteval = "0.2.4"

