[workspace]
members = ["core", "macros", "hw", "ffi_codegen"]
resolver = "2"

[profile.dev]
opt-level = 3


[workspace.dependencies]
nalgebra = { version = "0.33.2", features = ["rayon", "serde-serialize"]}
plotters = "0.3.7"
macroquad = "0.4.14"
osqp = "1.0.1"
serde = {version ="1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0.140"
rayon = "1.7"
