[package]
name = "control-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
macros = { path = "../macros"}
ffi_codegen = {path = "../ffi_codegen"}
solvers = {path = "../solvers"}
symbolic_services = {path = "../symbolic_services"}
general = {path = "../general"}

nalgebra = {workspace = true}
plotters = {workspace = true}
macroquad = {workspace = true}
serde = {workspace = true }
serde_derive = { workspace = true}
serde_json = { workspace = true}
rand = { workspace = true}
log = { workspace = true}
osqp = {workspace = true}

rand_distr = "0.4"
async-trait = "0.1"
toml = "0.8"
env_logger = "0.11" 
once_cell = "1.18"


[dev-dependencies]
proptest = "1.4"
approx = "0.5"

[[bin]]
name = "dynamics_codegen"
path = "src/bin/dynamics_codegen.rs"
