[package]
name = "hw"
version = "0.1.0"
edition = "2024"

[dependencies]
control-rs = { path = "../core"}

nalgebra = {workspace = true}
plotters = {workspace = true}
macroquad = {workspace = true}
osqp = {workspace = true}
serde = {workspace = true }
serde_derive = { workspace = true}
serde_json = { workspace = true}

[lib]
path = "src/lib.rs"
